# C_Programming_Kernigan_and_Ritchie

./: .gitignore  README.md
001_C_Training/: .gitignore  README.md
001_C_Training/001_safe_c_h/: README.md
001_C_Training/001_safe_c_h/001_Fil-C/: README.md
001_C_Training/Chapter03_Control_Flow/: README.md
001_C_Training/Chapter03_Control_Flow/a31_statements_and_blocks/: README.md
001_C_Training/a01_sample_code/: .gitignore  CMakeLists.txt  README.md  justfile
001_C_Training/a01_sample_code/src/: main.c
001_C_Training/b02_divided_conquer_code/: README.md
001_C_Training/b03_malloc_free/a01_malloc_free_heap-use-after-free/: .gitignore
001_C_Training/c01_malloc_free/: README.md
001_C_Training/c01_malloc_free/a01_malloc_free_simple/: README.md
001_C_Training/c01_malloc_free/src/: main.c
001_C_Training/chapter01/: README.md
001_C_Training/chapter01/a01_part3_argc_argv/: README.md
001_C_Training/chapter01/a03_format_specifier/: README.md
001_C_Training/chapter01/a04_single_quote_as_a_digit_separator/: CMakeLists.txt
001_C_Training/chapter01/a05_io_character/: README.md
001_C_Training/chapter01/a12_count_char_input_ver2/: README.md
001_C_Training/chapter01/b16_arrays/: README.md
001_C_Training/chapter01/d18_arguments_call_by_value/: README.md
001_C_Training/chapter01/f20_external_variables_and_scope/: .gitignore
001_C_Training/chapter01/f22_divided_conquer_code/: CMakeLists.txt
001_C_Training/chapter01/z99_save_io_charcter/: README.md
001_C_Training/chapter02/: README.md
001_C_Training/chapter02/a01_constant_expression/: README.md
001_C_Training/chapter02/a02_declarations/: README.md
001_C_Training/chapter02/a211_conditional_expressions/: README.md
001_C_Training/chapter02/a25_arithmetic_operators/: README.md
001_C_Training/chapter03_Control_Flow_computations/: README.md
001_C_Training/chapter04_Basics_of_Functions/: README.md
001_C_Training/chapter05/: README.md
001_C_Training/chapter05_Pointers_Addresses/: README.md
001_C_Training/chapter05_Pointers_Addresses/a53_pointers_and_arrays/: CMakeLists.txt  README.md
001_C_Training/chapter06_Structures/: README.md
001_C_Training/d01_test_c_code/: .gitignore  README.md
002_snippets_C_code/: README.md
002_snippets_C_code/a01_sample_code/: README.md
002_snippets_C_code/a02_ver2_just_final_sample/: CMakeLists.txt  README.md
002_snippets_C_code/a02_ver3_openSUSE/: CMakeLists.txt  README.md
002_snippets_C_code/a03_char_argv_argc/: README.md
002_snippets_C_code/b02_divided_conquer_code/: justfile
002_snippets_C_code/c01_test_c_code/: .gitignore  CMakeLists.txt  README.md
002_snippets_C_code/c01_test_c_just_cmake_setting/: README.md
002_snippets_C_code/c05_test_multi_testing_sample/: CMakeLists.txt
002_snippets_C_code/d01_matrix_1_2_3dmatrix/: README.md
002_snippets_C_code/e01_makefile_sample/: Makefile  README.md
002_snippets_C_code/e02_makefile_sample_multi_test/: Makefile  README.md  demo.c  simple_sort.c  sort_program.c  test_simple.c  test_sort.c
003_small_project/: README.md
003_small_project/001_SIMD_Optimization_x86_64/: README.md
003_small_project/002_SIMD_Rust_Lang_Optimization_x86_64/: README.md
003_small_project/003_SIMD_Cpp_Lang_Optimization_x86_64/: README.md
003_small_project/998_Cpp_Optimization_training/: README.md
003_small_project/C_Lang/: README.md
003_small_project/Rust_Lang/: README.md
003_small_project/a01_strlen_impl/: CMakeLists.txt  README.md
003_small_project/a01_strlen_impl/src/: main.c
003_small_project/a02_strlen_ver2_test/: CMakeLists.txt  Makefile  README.md
003_small_project/a02_strlen_ver2_test/src/: main.c  strlen_impl.c  strlen_impl.h  test_strlen.c
004_Cpp_Training/: README.md
004_Cpp_Training/001_CppCoreGuidelines/: README.md
004_Cpp_Training/002_Cpp23_Training/: .gitignore  README.md
004_Cpp_Training/002_Cpp23_Training/a02_linuxos_cpp23_import_std/: CMakeLists.txt  README.md
004_Cpp_Training/002_Cpp23_Training/a02_linuxos_cpp23_import_std/src/: std_import.cppm
004_Cpp_Training/003_Cpp20_Training/: README.md
004_Cpp_Training/998_MultiThreading_parallel/: README.md
004_Cpp_Training/999_Smart_Pointers/: README.md
005_snippets_Cpp_code/: README.md
005_snippets_Cpp_code/a01_hello_Vulkan_Linux_macOS/: README.md
005_snippets_Cpp_code/a01_hello_cpp_26/: CMakeLists.txt  README.md
005_snippets_Cpp_code/a01_hello_cpp_26_ver2/: .gitignore  CMakeLists.txt  README.md
005_snippets_Cpp_code/a02_divided_conquer_code_calculator/: README.md
005_snippets_Cpp_code/a02_ver2_just_final_sample/: README.md
005_snippets_Cpp_code/a03_cpp26_divided_conquer_code_calculator/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake
005_snippets_Cpp_code/a04_cpp26_scan_divided_conquer_code_calculator/: README.md
005_snippets_Cpp_code/c01_test_c_code/: README.md
005_snippets_Cpp_code/c02_calculator_header_divided_conquer_code_test/: CMakeLists.txt  README.md
005_snippets_Cpp_code/d01_cpp_matrix_1_2_3dmatrix/: README.md
005_snippets_Cpp_code/d01_matrix_1_2_3dmatrix/: CMakeLists.txt
005_snippets_Cpp_code/d02_print_c26_matrix_1_2_3d_matrix/: CMakeLists.txt  README.md
006_Zig_Training/: README.md
006_Zig_Training/001_Zig_basic_documentation/: README.md
006_Zig_Training/999_Smart_Pointers/: README.md
007_snippets_Zig_code/999_MultiThreading_parallel/001_OpenMP_parallel/a02_openmp_parallel_basic/: CMakeLists.txt
007_snippets_Zig_code/a02_divided_conquer_code_calculator/: CMakeLists.txt  README.md
008_Rust_basic/: README.md
008_Rust_basic/Generic/: README.md
008_Rust_basic/Generics/: README.md
009_Objective-C_Training/: README.md
009_Objective-C_Training/002_basic_structure/: CMakeLists.txt  README.md
009_Objective-C_Training/003_mixed_c_util/: .gitignore
010_snippets_Objective-C/: README.md
010_snippets_Objective-C/001_sample_basic_structure/: CMakeLists.txt
010_snippets_Objective-C/002_mixed_c_code_h/: CMakeLists.txt  README.md
010_snippets_Objective-C/002_mixed_c_code_h/src/: my_util.h
(+437 files in other folders)
